[package]
name = "nih_plug_vizia"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use VIZIA GUIs with NIH-plug"

[dependencies]
nih_plug = { path = "..", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0" }
vizia = { git = "https://github.com/Saisana299/vizia.git", default-features = false, features = ["baseview", "clipboard", "x11"] }

crossbeam = "0.8"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
